# books-etl

./: .gitignore  Makefile  README.md  dowload_data.py  pyproject.toml
data/: __main__.py  dowload_data.py
extract/: __main__.py  dowload_data.py  setup.py
schedule/: pyproject.toml  setup.py
schedule/schedule/: schedules.py
transform/: dbt_project.yml  profiles.yml
transform/macros/: generate_schema_name.sql
transform/models/: schema.yaml  sources.yaml
transform/models/mart/: ct_author_work.sql  ct_subject.sql
transform/models/staging/: author.sql  rating.sql  subject.sql  subject_people.sql  subject_place.sql  subject_time.sql  work.sql  work_author.sql
visualize/: app.py
