[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "dagster-dbt>=0.28.14",
    "dagster-webserver>=1.12.14",
    "dbt-core>=1.11.3",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.4",
]
